--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "bulma": "^0.8.2",
+    "font-awesome": "4.7",
+    "katex": "^0.11.1",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sass": "^1.26.7",
+    "tailwindcss": "^1.4.6"
   }
 }
