--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "font-awesome": "4.7",
     "katex": "^0.11.1",
     "next": "9.4.4",
+    "normalize.css": "^8.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "sass": "^1.26.7",
