--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bulma": "^0.8.2",
+    "classnames": "^2.2.6",
     "font-awesome": "4.7",
     "katex": "^0.11.1",
     "next": "9.4.4",
