Renombrar constants _> constantes

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,9 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "constants": ["constants"],
-      "controles": ["controles"],
-      "init": ["init"],
+      "constantes": ["constantes"],
       "components": ["components"]
     }
   }
