Renombrar components a componentes

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,7 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "constantes": ["constantes"],
-      "components": ["components"]
+      "componentes": ["componentes"]
     }
   }
 }
