--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "classnames": "^2.2.6",
     "font-awesome": "4.7",
     "katex": "^0.11.1",
+    "lodash": "^4.17.19",
     "next": "9.4.4",
     "normalize.css": "^8.0.1",
     "react": "16.13.1",
